新增Translator智能体

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <artifactId>langgraph4j-langchain4j</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-reactor</artifactId>
+            <version>0.36.2</version>
+        </dependency>
     </dependencies>
 
     <build>
